src/test/resources/semantic/sentences/error/TC_ERROR_ASIGNATION2.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 7 | COLUMNA 10 | Se esperaba una variable de tipo Str y se encontro una de tipo Int. |
struct A{
    Str a;
}

impl A{
    .(){
        a=1;
    }
}

start{
}
